# shinto-library

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  deploy.sh  deploy_tag.sh  docker-compose.yml  pyproject.toml  release.sh  ruff.toml  run_tests.sh  setup.py  test.json
.github/: release.sh
.github/workflows/: docs_pages.yml  nose2_test.yml  ruff_format.yml  test_xmlprocessor.yml  unit_test.yml
docs/: conf.py  index.rst
integration_tests/: main.py  test_shinto.py
integration_tests/test_mimir/: test_taxonomy.py
scripts/: clean.sh  install.sh  merge_into_main.sh  release.sh  send_to_loki.sh  update.sh
shinto/: TRANSFORMATION_GUIDE.md  __init__.py  config.py  database_connection.py  exceptions.py  general.py  json_schema.py  jsonschema.py  logging.py  metrics.py  rabbitmq.py  retry_wrapper.py  taxonomy.py  transform.py  uvicorn_entrypoint.py
shinto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shinto/azure/: __init__.py  blob_storage.py
shinto/json_schema/: taxonomy_schema.json  transformation_schema.json
shinto/juno/: __init__.py  basisset20_flatdata.py  data.py
shinto/mimir/: __init__.py  base.py  (+15 more)
tests/: __init__.py  test_config.py  test_database_connection.py  test_jsonschema  test_jsonschema.py  test_logging.py  test_metrics.py  test_rabbitmq.py  test_retry_wrapper.py  test_taxonomy.py  test_transform.py  test_uvicorn_entrypoint.py
tests_integration/: __init__.py  test_uvicorn_entrypoint.py
testw/: test_config.py  test_logging.py
transform_test/: PREFIXING_GUIDE.md  TRANSFORMATION_GUIDE.md  manual_test.py  taxonomy.json  test.txt
(+43 files in other folders)
