[project]
name = "shinto"
version = "1.0.48"
description = "Shinto Labs default python library"
authors = [
    {name = "Aron Hemmes", email = "aron@shintolabs.nl"},
    {name = "Tommy van Schie", email = "tommy@shintolabs.nl"}
]
dependencies = [
    "pyyaml>=5.3.1",
    "jsonschema>=4.23.0",
    "prometheus-client>=0.20.0",
    "anyio>=4.4.0",
    "psycopg[binary,pool]>=3.2.1",
    "pika>=1.3.2",
]
requires-python = ">=3.8"
readme = "README.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.4",
    "nose2[coverage_plugin]>=0.15.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=2.0.0",
]
